# flatline

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/construct/: Cargo.toml
crates/construct/src/: api.rs  auth.rs  auto_review.rs  checkpoint.rs  compaction.rs  compaction_pipeline_tests.rs  compaction_trigger.rs  config.rs  context.rs  control.rs  cost.rs  jobs.rs  lib.rs  message.rs  model_catalog.rs  monitors.rs  permissions.rs  prompt.rs  runner.rs  s1.rs  s2.rs  s3.rs  s4.rs  session.rs  shell.rs  shells.rs  snapshot.rs  storage.rs  text.rs  tool.rs  tool_preview.rs  topic.rs  transcript.rs  transcript_search.rs  wakes.rs  web.rs
crates/construct/src/lsp/: config.rs  connection.rs  diagnostics.rs  mod.rs  servers.rs
crates/construct/src/mcp/: config.rs  connection.rs  handler.rs  mod.rs  output.rs  prompt.rs  registry.rs  resource.rs  schema.rs  search.rs  serve.rs
crates/construct/src/session/: auto_permissions.rs  compact.rs  format.rs  history.rs  integrations.rs  request.rs  subagent.rs  terminal.rs  tools.rs
crates/construct/src/tool/: action.rs  defs.rs  execute.rs  parse.rs  presentation.rs
crates/construct/src/tool/execute/: fs.rs  search.rs  shell.rs  subprocess.rs
crates/construct/tests/: compaction.rs  lsp_integration.rs
crates/deck/: Cargo.toml
crates/deck/examples/: throbber_demo.rs
crates/deck/src/: agent_panel.rs  app.rs  auth_helper.rs  command.rs  fork_picker.rs  history.rs  image_util.rs  impact.rs  jobs_panel.rs  log_panel.rs  lsp_panel.rs  main.rs  markdown.rs  mcp_panel.rs  model_panel.rs  permissions_panel.rs  rewind_picker.rs  runs_panel.rs  selection.rs  session_picker.rs  subagent_panel.rs  terminal_pane.rs  text_area.rs  throbber.rs  toast.rs
crates/deck/src/export/: mod.rs  openai.rs
crates/deck/src/layout/: control_panel.rs  discovery.rs  mod.rs
crates/deck/src/markdown/: block.rs  diff.rs  highlight.rs  mermaid.rs  mod.rs  parse.rs  table.rs
crates/deck/src/terminal/: mod.rs  widget.rs
crates/deck/tests/: export.rs
crates/deck/tests/fixtures/: bottom_line_message.txt
docs/: configuration.md  getting-started.md  index.md  interface.md  mcp.md  tools.md  troubleshooting.md  workflows.md
docs/examples/: config.toml
