[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/pocketdoc/flatline"

[workspace.dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["bracketed-paste"] }

# Terminal emulation
alacritty_terminal = "0.25"

# PTY
portable-pty = "0.9"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Markdown
tui-markdown = "0.3"

# Clipboard
arboard = "3"

# Config
dirs = "6"
