[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/pocketdoc/flatline"
homepage = "https://github.com/pocketdoc/flatline"

[workspace.dependencies]
# TUI
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["bracketed-paste"] }

# Terminal emulation
alacritty_terminal = "0.25"

# PTY
portable-pty = "0.9"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
backon = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Encoding
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Markdown
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
two-face = "0.4"
similar = { version = "2", features = ["inline"] }
ascii-dag = "0.9"

# Clipboard
arboard = "3"

# Unicode
unicode-segmentation = "1"
unicode-width = "0.2"

# Regex
regex = "1"

# Fuzzy matching
nucleo-matcher = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Config
dirs = "6"

# MCP
rmcp = { version = "1", default-features = false, features = [
    "client",
    "server",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "transport-io",
    "macros",
    "elicitation",
] }
sha1_smol = "1"
tokio-util = { version = "0.7", features = ["compat"] }
tower-service = "0.3"

# LSP
async-lsp = { version = "0.2", features = ["tokio"] }
dashmap = "6"

# Wake scheduling
cron = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
rusqlite = { version = "0.32", features = ["bundled"] }
