[package]
name = "construct"
version = "0.1.0"
description = "Headless agent core — LLM communication, tool execution, session state."
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
portable-pty.workspace = true
