[package]
name = "construct"
version = "0.1.0"
description = "Headless agent core — LLM communication, tool execution, session state."
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
backon.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
portable-pty.workspace = true
alacritty_terminal.workspace = true
regex.workspace = true
nucleo-matcher.workspace = true
similar.workspace = true
rmcp.workspace = true
sha1_smol.workspace = true
tokio-util.workspace = true
async-lsp.workspace = true
dashmap.workspace = true
tower-service.workspace = true
base64.workspace = true
image.workspace = true
cron.workspace = true
chrono.workspace = true
notify.workspace = true
rusqlite.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
