[package]
name = "deck"
version = "0.1.0"
description = "TUI harness — pair programmer interface for flatline agents."
edition.workspace = true
license.workspace = true

[[bin]]
name = "flatline"
path = "src/main.rs"

[dependencies]
construct = { path = "../construct" }
ratatui.workspace = true
crossterm.workspace = true
alacritty_terminal.workspace = true
tokio.workspace = true
anyhow.workspace = true
arboard.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
pulldown-cmark.workspace = true
syntect.workspace = true
two-face.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
dirs.workspace = true
ascii-dag.workspace = true
clap.workspace = true
clap_complete.workspace = true
base64.workspace = true
